--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM tensorflow/tensorflow:1.5.0-gpu
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y git 
-RUN git clone https://github.com/tensorflow/nmt
+RUN git clone https://github.com/kanghj/nmt
 WORKDIR "nmt"
 RUN mkdir data
 RUN mkdir log
@@ -11,4 +11,3 @@ COPY data data
 COPY run.sh run.sh
 RUN touch abc.txt
 
-CMD ['./run.sh']
