--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,8 +3,9 @@ FROM tensorflow/tensorflow:1.5.0-gpu
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y git 
-RUN git clone https://github.com/kanghj/nmt
+RUN git clone https://github.com/kanghj/nmt 
 WORKDIR "nmt"
+RUN git checkout blah
 RUN mkdir data
 RUN mkdir log
 COPY data data
